Fix performance issue with truncation

--- a/app/client/compass/sass/_addresses.sass
+++ b/app/client/compass/sass/_addresses.sass
@@ -102,11 +102,8 @@ $func_panel_height: 4rem
 
 .address_title
 	&.is_full
-		.coin_code
-			display: none
 		.coin_address
 			font-size: 1rem
-			margin-left: 0
 
 .tip
 	width: 22rem
@@ -138,7 +135,6 @@ $func_panel_height: 4rem
 		+opacity(0)
 
 .coin_address
-	margin-left: 1rem
 	+transition(all 0.3s ease-out)
 
 .coin_balance
